# Rimworld-Mod-Manager

./: .gitignore  CHANGELOG.md  QuickStart.bat  README.md  ROADMAP.md  build.bat  dev.bat  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  analyze_mods.py  check_results.txt  tauri.conf.json  test_parse.rs
src-tauri/capabilities/: default.json
src-tauri/scratch/: flip_pngs.ps1
src-tauri/src/: about.rs  ai.rs  auto_sort.rs  backups.rs  collections.rs  crash_analyzer.rs  custom_rules.rs  lib.rs  log_tail.rs  main.rs  mods.rs  optimize.rs  paths.rs  savegame.rs  size_analysis.rs  steam_db.rs  steamcmd.rs  updates.rs  workshop.rs
src/components/: CustomDialog.tsx  CustomRulesModal.tsx  ErrorBoundary.tsx  Sidebar.tsx
src/locales/: en.json  vi.json
src/views/: CollectionsView.tsx  CrashAnalyzerView.tsx  DownloadView.tsx  GuideView.tsx  LoadOrderView.tsx  LogsView.tsx  ModHubView.tsx  ModsView.tsx  SaveGameView.tsx  SettingsView.tsx  WorkshopBrowserView.tsx
