[package]
name = "rimworldmodmanager"
version = "0.2.9"
description = "RimWorld Mod Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "rimworldmodmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
zip = "2"
walkdir = "2"
anyhow = "1"
thiserror = "2"
scraper = "0.20"
regex = "1"
urlencoding = "2"
base64 = "0.22"
open = "5"
quick-xml = { version = "0.37", features = ["serialize"] }
fs_extra = "1.3.0"
image = "0.25.10"
image_dds = "0.7.2"
rayon = "1.12.0"
once_cell = "1.21.4"
